[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="listPlayer" type="ItemList" parent="."]
margin_left = 253.0
margin_top = 101.0
margin_right = 598.0
margin_bottom = 239.0

[node name="btnConnect" type="Button" parent="."]
margin_left = 360.0
margin_top = 364.0
margin_right = 490.0
margin_bottom = 388.0
text = "connect"

[node name="textNick" type="TextEdit" parent="."]
margin_left = 339.0
margin_top = 338.0
margin_right = 512.0
margin_bottom = 359.0

[node name="chkReady" type="CheckBox" parent="."]
margin_left = 257.0
margin_top = 240.0
margin_right = 369.0
margin_bottom = 264.0
text = "ready"
